--- a/app/views/knowledge_base/show.html.erb
+++ b/app/views/knowledge_base/show.html.erb
@@ -1,5 +1,6 @@
 <div class="content grid">
   <div class="sidebar span-3">
+    <h3>GCC Compendium</h3>
     <%= menu_tree @menu %>
   </div>
   <section class="page span-9">
