--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -1,7 +1,7 @@
 @import "@/breakpoints";
 @import "@/colors";
 
-body.knowledge_base.show {
+body.compendium.show {
   .sidebar {
     position: sticky;
     top: 40px;
