--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -1,6 +1,13 @@
 <div class="content grid">
   <div class="sidebar span-3">
-    <h3>GCC Compendium</h3>
+    <input type="checkbox" class="sidebar-menu-toggle" id="sidebar-menu-toggle">
+    <h3>
+      <label for="sidebar-menu-toggle" class="sidebar-menu-toggle-label">
+        <%= inline_svg_tag 'caret-right.svg', class: 'open' %>
+        <%= inline_svg_tag 'caret-down.svg', class: 'close' %>
+      </label>
+      GCC Compendium
+    </h3>
     <%= menu_tree @menu %>
   </div>
   <section class="page span-9">
