analog stick content

--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -331,6 +331,7 @@ body.compendium.show {
 
     aside {
       float: right;
+      clear: right;
       max-width: 25%;
       margin: -24px 0 36px 48px;
 
