--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -12,8 +12,8 @@
   </div>
   <section class="page span-9">
     <h1><%= @title %></h1>
-    <% if @description.present? %>
-      <p class="big"><%= @description %></p>
+    <% if @subtitle.present? %>
+      <p class="big"><%= @subtitle %></p>
     <% end %>
     <%= @content %>
   </section>
