--- a/app/views/compendium/_menu_tree.html.erb
+++ b/app/views/compendium/_menu_tree.html.erb
@@ -1,6 +1,6 @@
 <ul class="indent-<%= locals[:indent] %>">
   <% locals[:tree].each do |item| %>
-    <% if item === 'separator' %>
+    <% if item[:separator] %>
       <li class="separator"></li>
     <% else %>
       <li class="<%= 'current' if path_matches?(item[:path], @current_path) %> <%= 'has-children' if item[:children].present? %>">
@@ -8,7 +8,7 @@
           <%= check_box_tag "menu-toggle-#{item[:path].parameterize}", 'a', path_matches?(item[:path], @current_path) %>
         <% end %>
         <div class="item-container">
-          <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
+          <%= link_to item[:label], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
           <% if item[:children].present? %>
             <label for="menu-toggle-<%= item[:path].parameterize %>">
               <%= inline_svg_tag 'caret-right-2.svg', class: 'open' %>
