--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -8,7 +8,7 @@
       </label>
       GCC Compendium
     </h3>
-    <%= menu_tree @menu %>
+    <%= nav_tree @nav %>
   </div>
   <section class="page span-9">
     <h1><%= @title %></h1>
