--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -6,7 +6,7 @@
         <%= inline_svg_tag 'caret-right.svg', class: 'open' %>
         <%= inline_svg_tag 'caret-down.svg', class: 'close' %>
       </label>
-      GCC Compendium
+      Compendium
     </h3>
     <%= nav_tree @nav %>
   </div>
