--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -30,7 +30,7 @@
 
   <section class="span-4">
 
-    <h2>Browse the <strong>map</strong></h2>
+    <h2>Browse the <%= link_to 'map', modders_path(map: 1) %></h2>
     <p>Support local makers. Find a modder near you.</p>
 
     <%= form_with url: modders_path, method: 'get', html: { class: 'location-search' } do |form| %>
