--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -1,11 +1,18 @@
 <div class="content grid">
 
+  <% if current_user.present? && current_user.admin? %>
+    <nav class="span-12 admin-toolbar">
+      <%= link_to 'Edit this profile', admin_edit_profile_path(@modder) %>
+      <%= link_to 'Create new profile', new_profile_path %>
+    </nav>
+  <% end %>
+
   <% if @modder.unclaimed? %>
     <section class="span-12 unclaimed-notice">
       <figure><%= inline_svg_tag 'info.svg' %></figure>
       <div>
         <p>This profile has not been claimed by the modder and may have inaccuracies. For the most up-to-date info, contact this modder directly.</p>
-        <p>Is this you? <a href="#">Claim this profile</a></p>
+        <p>Is this you? Contact us <a href="https://discord.gg/HwtPU7tkCT" target="_blank">via Discord</a> to claim this profile!</p>
       </div>
     </section>
   <% end %>
