discord username placeholder

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -174,7 +174,7 @@
         field_type: :text_field,
         error_field: :message,
         label: 'Discord username',
-        options: { maxlength: 50, class: 'text-input medium', placeholder: 'YourName#1234', autocomplete: 'off' }
+        options: { maxlength: 50, class: 'text-input medium', placeholder: 'YourDiscordUsername', autocomplete: 'off' }
       } %>
 
     </div>
