--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -11,7 +11,7 @@
     <section class="span-12 unclaimed-notice">
       <figure><%= inline_svg_tag 'info.svg' %></figure>
       <div>
-        <p>This profile has not been claimed by the modder and may have inaccuracies. For the most up-to-date info, contact this modder directly.</p>
+        <p>This profile is not managed by the modder and may have inaccuracies. For the most up-to-date info, contact this modder directly.</p>
         <p>Is this you? Contact us <a href="https://discord.gg/HwtPU7tkCT" target="_blank">via Discord</a> to claim this profile!</p>
       </div>
     </section>
