--- a/app/frontend/components/ModderSelector.scss
+++ b/app/frontend/components/ModderSelector.scss
@@ -3,20 +3,34 @@
 .ModderSelector {
   position: relative;
 
-  > svg {
-    position: absolute;
-    top: 14px;
-    left: 14px;
-    width: 20px;
-    height: 20px;
-    color: $indigo-light;
-  }
-
   .modder-selector__control {
+    transition: none;
+    width: 240px;
     height: 48px;
     box-shadow: inset 0 0 0 2px $indigo-light;
-    padding: 0 24px 1px 48px;
+    padding: 0 24px 1px 46px;
     border-radius: 48px;
+    cursor: text;
+
+    &:hover {
+      box-shadow:
+        inset 0 0 0 2px $indigo,
+        0 8px 8px -12px $black;
+
+      > svg {
+        color: $indigo;
+      }
+    }
+
+    > svg {
+      position: absolute;
+      top: 14px;
+      left: 14px;
+      width: 20px;
+      height: 20px;
+      color: $indigo-light;
+      pointer-events: none;
+    }
 
     .modder-selector__indicators {
       display: none;
