--- a/app/frontend/components/ModderSelector.scss
+++ b/app/frontend/components/ModderSelector.scss
@@ -7,20 +7,10 @@
     transition: none;
     width: 240px;
     height: 48px;
-    box-shadow: inset 0 0 0 2px $indigo-light;
     padding: 0 24px 1px 46px;
     border-radius: 48px;
     cursor: text;
-
-    &:hover {
-      box-shadow:
-        inset 0 0 0 2px $indigo,
-        0 8px 8px -12px $black;
-
-      > svg {
-        color: $indigo;
-      }
-    }
+    background-color: $crystal;
 
     > svg {
       position: absolute;
@@ -28,7 +18,7 @@
       left: 14px;
       width: 20px;
       height: 20px;
-      color: $indigo-light;
+      color: $platinum;
       pointer-events: none;
     }
 
@@ -39,9 +29,73 @@
     .modder-selector__placeholder {
       color: $panasonic;
     }
+
+    &:hover {
+      box-shadow:
+        inset 0 0 0 2px darken($platinum, 20%),
+        0 8px 8px -12px $black;
+    }
+
+    &--is-focused {
+      box-shadow:
+        inset 0 0 0 2px $spice,
+        inset 0 2px 10px -6px $black !important;
+    }
+
+    &--is-focused {
+      background-color: $white;
+
+      > svg {
+        color: $panasonic;
+      }
+    }
+
+    &--menu-is-open {
+      border-radius: 24px 24px 0 0;
+    }
+  }
+
+  .modder-selector__menu {
+    background-color: $white;
+    border: 2px solid $indigo;
+    border-top: 0;
+    box-shadow:
+      0 12px 12px -16px var(--color-black),
+      0 16px 32px -48px var(--color-black);
+  }
+
+  .modder-selector__menu-list {
+    padding: 4px 0;
   }
 
   .modder-selector__option {
-    background-color: orange;
+    display: flex;
+    padding: 4px 8px;
+    align-items: center;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $crystal;
+    }
+
+    > .logo {
+      flex: none;
+      margin: 0 8px 0 0;
+      width: 40px;
+      height: 40px;
+      background-color: $platinum;
+      border-radius: 32px;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: darken($platinum, 20%);
+
+      svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
   }
 }
