--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -8,7 +8,7 @@ header {
     align-items: center;
     height: 80px;
 
-    .logo {
+    > .logo {
       flex: none;
       margin: 0 0 0 -1px;
       font-size: 20px;
@@ -137,7 +137,7 @@ header {
     .user-menu {
       width: 48px;
       height: 48px;
-      margin-left: 32px;
+      margin-left: 24px;
       position: relative;
 
       @include small {
@@ -152,7 +152,9 @@ header {
           visibility: visible;
           opacity: 1;
           transform: none;
-          transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+          transition:
+            transform 0.2s ease-out,
+            opacity 0.2s ease-out;
         }
 
         &:checked ~ label > figure {
@@ -176,7 +178,9 @@ header {
         transform-origin: 36px 36px;
         transform: rotate(10deg);
         opacity: 0;
-        transition: transform 0.1s ease-out, opacity 0.1s ease-out,
+        transition:
+          transform 0.1s ease-out,
+          opacity 0.1s ease-out,
           visibility 0s linear 0.1s;
 
         @include dark {
@@ -217,7 +221,8 @@ header {
         right: -12px;
         top: calc(100% + 8px);
         background-color: var(--color-white);
-        box-shadow: 0 12px 12px -16px var(--color-black),
+        box-shadow:
+          0 12px 12px -16px var(--color-black),
           0 16px 32px -48px var(--color-black),
           inset 0 0 0 2px var(--color-spice);
         list-style: none;
@@ -228,12 +233,15 @@ header {
         transform-origin: calc(100% - 32px) -32px;
         transform: rotate(10deg);
         opacity: 0;
-        transition: transform 0.1s ease-out, opacity 0.1s ease-out,
+        transition:
+          transform 0.1s ease-out,
+          opacity 0.1s ease-out,
           visibility 0s linear 0.1s;
 
         @include dark {
           background-color: var(--color-smoke);
-          box-shadow: 0 12px 12px -16px var(--color-ink),
+          box-shadow:
+            0 12px 12px -16px var(--color-ink),
             0 16px 32px -48px var(--color-ink),
             inset 0 0 0 2px var(--color-panasonic);
         }
