--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -6,8 +6,18 @@
     <label for="menu-toggle" id="menu-toggle-button"><%= inline_svg_tag 'menu.svg' %></label>
     <input type="checkbox" id="menu-toggle">
     <ul class="menu">
+      <% if flag_enabled? :compendium %>
+        <li><%= link_to 'Compendium', compendium_path %></li>
+      <% end %>
+      <li><%= link_to 'Find a modder', modders_path %></li>
+      <% if !user_signed_in? %>
+        <li><%= link_to 'Get listed', new_user_registration_path %></li>
+      <% elsif current_modder.blank? %>
+        <li><%= link_to 'Set up profile', edit_profile_path %></li>
+      <% end %>
+      <li class="close"><label for="menu-toggle" id="menu-close"><%= inline_svg_tag 'x.svg' %></label></li>
       <% if flag_enabled? :jump_to_modder %>
-        <li>
+        <li class="modder-selector">
           <%=
             react_component 'ModderSelector', {
               modders: Modder.all.map do |modder|
@@ -21,16 +31,6 @@
           %>
         </li>
       <% end %>
-      <% if flag_enabled? :compendium %>
-        <li><%= link_to 'Compendium', compendium_path %></li>
-      <% end %>
-      <li><%= link_to 'Find a modder', modders_path %></li>
-      <% if !user_signed_in? %>
-        <li><%= link_to 'Get listed', new_user_registration_path %></li>
-      <% elsif current_modder.blank? %>
-        <li><%= link_to 'Set up profile', edit_profile_path %></li>
-      <% end %>
-      <li class="close"><label for="menu-toggle" id="menu-close"><%= inline_svg_tag 'x.svg' %></label></li>
     </ul>
 
     <% if current_modder.present? %>
