--- a/app/frontend/components/ModderSelector.scss
+++ b/app/frontend/components/ModderSelector.scss
@@ -57,7 +57,7 @@
 
   .modder-selector__menu {
     background-color: $white;
-    border: 2px solid $indigo;
+    border: 2px solid $spice;
     border-top: 0;
     box-shadow:
       0 12px 12px -16px var(--color-black),
@@ -74,8 +74,10 @@
     align-items: center;
     cursor: pointer;
 
-    &:hover {
+    &:hover,
+    &--is-focused {
       background-color: $crystal;
+      font-weight: bold;
     }
 
     > .logo {
