--- a/app/frontend/components/ModderSelector.scss
+++ b/app/frontend/components/ModderSelector.scss
@@ -59,9 +59,15 @@
     background-color: $white;
     border: 2px solid $spice;
     border-top: 0;
+    border-radius: 0 0 8px 8px;
     box-shadow:
       0 12px 12px -16px var(--color-black),
       0 16px 32px -48px var(--color-black);
+
+    .modder-selector__menu-notice--no-options {
+      padding: 12px 0;
+      color: $platinum;
+    }
   }
 
   .modder-selector__menu-list {
