--- a/app/frontend/components/ModderSelector.scss
+++ b/app/frontend/components/ModderSelector.scss
@@ -1,4 +1,5 @@
 @import "@/colors";
+@import "@/dark";
 
 .ModderSelector {
   position: relative;
@@ -12,6 +13,10 @@
     cursor: text;
     background-color: $crystal;
 
+    @include dark {
+      background-color: $smoke;
+    }
+
     > svg {
       position: absolute;
       top: 14px;
@@ -20,6 +25,10 @@
       height: 20px;
       color: $platinum;
       pointer-events: none;
+
+      @include dark {
+        color: $panasonic;
+      }
     }
 
     .modder-selector__indicators {
@@ -34,19 +43,33 @@
       box-shadow:
         inset 0 0 0 2px darken($platinum, 20%),
         0 8px 8px -12px $black;
-    }
 
-    &--is-focused {
-      box-shadow:
-        inset 0 0 0 2px $spice,
-        inset 0 2px 10px -6px $black !important;
+      @include dark {
+        box-shadow:
+          inset 0 0 0 2px $platinum,
+          0 8px 8px -12px $ink;
+      }
     }
 
     &--is-focused {
       background-color: $white;
+      box-shadow:
+        inset 0 0 0 2px $spice,
+        inset 0 2px 10px -6px $black !important;
+
+      @include dark {
+        background-color: $black;
+        box-shadow:
+          inset 0 0 0 2px $spice,
+          inset 0 2 10px -6px $ink !important;
+      }
 
       > svg {
         color: $panasonic;
+
+        @include dark {
+          color: $platinum;
+        }
       }
     }
 
@@ -64,9 +87,20 @@
       0 12px 12px -16px var(--color-black),
       0 16px 32px -48px var(--color-black);
 
+    @include dark {
+      background-color: $black;
+      box-shadow:
+        0 12px 12px -16px var(--color-ink),
+        0 16px 32px -48px var(--color-ink);
+    }
+
     .modder-selector__menu-notice--no-options {
       padding: 12px 0;
       color: $platinum;
+
+      @include dark {
+        color: $panasonic;
+      }
     }
   }
 
@@ -84,6 +118,10 @@
     &--is-focused {
       background-color: $crystal;
       font-weight: bold;
+
+      @include dark {
+        background-color: $smoke;
+      }
     }
 
     > .logo {
