--- a/app/frontend/foundation.scss
+++ b/app/frontend/foundation.scss
@@ -24,6 +24,7 @@ body {
   box-sizing: border-box;
   min-height: 100vh;
   background-color: var(--color-pearl);
+  overflow-x: hidden;
 
   @include dark {
     background-color: var(--color-black);
