--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -275,6 +275,13 @@ body.compendium.show {
       top: -1px;
     }
 
+    .stub-notice {
+      padding: 16px 24px 20px;
+      background-color: var(--color-crystal);
+      box-shadow: inset 0 0 0 1px var(--color-platinum);
+      border-radius: 8px;
+    }
+
     ul {
       padding-left: 24px;
 
