--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -15,6 +15,11 @@
     <% if @subtitle.present? %>
       <p class="big"><%= @subtitle %></p>
     <% end %>
+    <% if @stub %>
+      <p class="stub-notice">
+        This page is incomplete and may be missing key information. Want to help improve it? <a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> and check out <%= link_to "this page's source on GitHub", "https://github.com/jmarquis/controllers/tree/main/app/views/compendium/content/#{@path}" %>.
+      </p>
+    <% end %>
     <%= @content %>
   </section>
 </div>
