compendium page footer

--- a/app/frontend/footer.scss
+++ b/app/frontend/footer.scss
@@ -2,7 +2,7 @@
 @import "@/colors";
 @import "@/dark";
 
-footer {
+body > footer {
   background-color: var(--color-black);
   color: $platinum;
   padding: 64px 0 72px;
