--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -280,6 +280,11 @@ body.compendium.show {
       background-color: var(--color-crystal);
       box-shadow: inset 0 0 0 1px var(--color-platinum);
       border-radius: 8px;
+
+      @include dark {
+        background-color: var(--color-smoke);
+        box-shadow: inset 0 0 0 1px var(--color-panasonic);
+      }
     }
 
     ul {
@@ -317,6 +322,16 @@ body.compendium.show {
       p {
         margin-top: 8px;
         font-size: 14px;
+      }
+    }
+
+    footer {
+      margin-top: 80px;
+      color: var(--color-panasonic);
+      font-size: 14px;
+
+      @include dark {
+        color: var(--color-platinum);
       }
     }
   }
