--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -17,10 +17,13 @@
     <% end %>
     <% if @stub %>
       <p class="stub-notice">
-        This page is incomplete and may be missing key information. Want to help improve it? <a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> and check out <%= link_to "this page's source on GitHub", "https://github.com/jmarquis/controllers/tree/main/app/views/compendium/content/#{@path}" %>.
+        This page is incomplete and may be missing key information. Want to help improve it? <a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> and edit <%= link_to "this page's source on GitHub", "https://github.com/jmarquis/controllers/edit/main/app/views/compendium/content/#{@path}" %>.
       </p>
     <% end %>
     <%= @content %>
+    <footer>
+      <%= link_to "Edit this page", "https://github.com/jmarquis/controllers/edit/main/app/views/compendium/content/#{@path}" %> in GitHub. Learn more about <a href="/compendium/contributing">contributing to the Compendium</a>.
+    </footer>
   </section>
 </div>
 
