--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -22,7 +22,7 @@
     <% end %>
     <%= @content %>
     <footer>
-      <%= link_to "Edit this page", "https://github.com/jmarquis/controllers/edit/main/app/views/compendium/content/#{@path}" %> in GitHub. Learn more about <a href="/compendium/contributing">contributing to the Compendium</a>.
+      <%= link_to "Edit this page", "https://github.com/jmarquis/controllers/edit/main/app/views/compendium/content/#{@path}" %> on GitHub. Learn more about <a href="/compendium/contributing">contributing to the Compendium</a>.
     </footer>
   </section>
 </div>
