--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -327,7 +327,8 @@ body.compendium.show {
         display: block;
       }
 
-      img {
+      img,
+      video {
         width: 100%;
       }
 
