--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -317,13 +317,17 @@ body.compendium.show {
       max-width: 25%;
       margin: -24px 0 36px 48px;
 
+      &.no-offset {
+        margin-top: 16px;
+      }
+
       @include small {
         float: none;
         margin: 24px auto;
         max-width: 80%;
       }
 
-      a:first-child {
+      > a:first-child {
         display: block;
       }
 
