--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -7,7 +7,7 @@
 
     <p><a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> for questions or suggestions about the site.</p>
 
-    <p>This website is completely open-source. Bug reports and contributions are welcome! Find the <a href="https://github.com/jmarquis/controllers" target="_blank">source code on GitHub</a>.</p>
+    <p>This website is completely open-source. Bug reports and contributions are welcome! Find the <a href="https://github.com/dol-003/dol-003-web" target="_blank">source code on GitHub</a>.</p>
 
   </div>
 </div>
