--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -346,6 +346,7 @@ body.compendium.show {
       margin-top: 80px;
       color: var(--color-panasonic);
       font-size: 14px;
+      line-height: 1.5;
 
       @include dark {
         color: var(--color-platinum);
