--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -125,6 +125,10 @@ header {
           @include medium {
             margin-left: 0;
             margin-top: 16px;
+
+            &.modder-selector {
+              margin-top: 24px;
+            }
           }
         }
       }
